# fivetran-connector

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  configuration.example.json  connector.py  pyproject.toml
.github/workflows/: ci.yml
tests/: test_connector.py
